--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Rock, Paper, Scissors Game</title>
+    <script type="text/javascript" src="scripts/vendor/jquery-3.1.0.min.js"></script>
     <script type="text/javascript" src="scripts/game.js"></script>
     </script>
   </head>
@@ -14,6 +15,7 @@
   <option>Paper</option>
   <option>Scissors</option>
 </select>
-<button onClick="playGame()">Rock, Paper, Scissors, Go!</button>
+<button onClick="playGame()" id="gamesPlayed">Rock, Paper, Scissors, Go!</button>
+<div id="outcomesDiv"></div>
   </body>
 </html>
